--- a/index.html
+++ b/index.html
@@ -22,120 +22,120 @@
     <!-- Timeblocks go here -->
     <div id = "timeBlocks" class="container">
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>9AM</span></div>
+            <div class="col-2" id="datediv"><span>9AM</span></div>
             <div class="col-8" id="datediv">
                 <input type="text" id="first_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="9"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>10AM</span></div>
+            <div class="col-2 " id="datediv"><span>10AM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="second_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="10"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>11AM</span></div>
+            <div class="col-2" id="datediv"><span>11AM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="third_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save-sec">
-                <button type="button" class="btn btn-ligh" id="11"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-ligh" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>Noon</span></div>
+            <div class="col-2" id="datediv"><span>Noon</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="fourth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="Noon"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>1PM</span></div>
+            <div class="col-2" id="datediv"><span>1PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="fifth_toDo" placeholder="Daily Task">
          </div>
          <div class="col-2" id="save_sec">
-            <button type="button" class="btn btn-light" id="1"><i class="fas fa-save"></i></button>
+            <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
         </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>2PM</span></div>
+            <div class="col-2" id="datediv"><span>2PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="sixth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="2"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>3PM</span></div>
+            <div class="col-2" id="datediv"><span>3PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="seventh_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="3"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>4PM</span></div>
+            <div class="col-2" id="datediv"><span>4PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="eigth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="4"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>5PM</span></div>
+            <div class="col-2" id="datediv"><span>5PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="nineth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="5"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>6PM</span></div>
+            <div class="col-2" id="datediv"><span>6PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="tenth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="6"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>7PM</span></div>
+            <div class="col-2" id="datediv"><span>7PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="eleventh_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="7"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>8PM</span></div>
+            <div class="col-2" id="datediv"><span>8PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="twelveth_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="8"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <div id="input-row" class="row">
-            <div class="col-2 fecha" id="datediv"><span>9PM</span></div>
+            <div class="col-2" id="datediv"><span>9PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="thirdteen_toDo" placeholder="Daily Task">
             </div>
             <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="9"><i class="fas fa-save"></i></button>
+                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
