changing classes in html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
-        <div id="input-row" class="row">
+        <div  class="row input-row">
             <div class="col-2" id="datediv"><span>6PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="tenth_toDo" placeholder="Daily Task">
@@ -111,7 +111,7 @@
                 <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
             </div>
         </div>
-        <div id="input-row" class="row">
+        <div  class="row input-row">
             <div class="col-2" id="datediv"><span>7PM</span></div>
             <div class="col-8" id="task-input">
                 <input type="text" id="eleventh_toDo" placeholder="Daily Task">
