--- a/index.html
+++ b/index.html
@@ -20,124 +20,112 @@
         <p id="currentDay" class="lead"></p>
     </header>
     <!-- Timeblocks go here -->
-    <div id = "timeBlocks" class="container">
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>9AM</span></div>
-            <div class="col-8" id="datediv">
-                <input type="text" id="first_toDo" placeholder="Daily Task">
+    <div id="timeBlocks" class="container">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>9AM</span></div>
+            <div class="col-md-8" id="datediv">
+                <textarea class="col-md-10 description" id="first_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2 " id="datediv"><span>10AM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="second_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>10AM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="second_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>11AM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="third_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>11AM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="third_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save-sec">
-                <button type="button" class="btn btn-ligh" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>Noon</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="fourth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>Noon</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="fourth_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>1PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="fifth_toDo" placeholder="Daily Task">
-         </div>
-         <div class="col-2" id="save_sec">
-            <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>1PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="fifth_toDo">
+                </textarea>
+            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>2PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="sixth_toDo">
+                </textarea>
+            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>2PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="sixth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>3PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="seventh_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>3PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="seventh_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>4PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="eigth_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>4PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="eigth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>5PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="nineth_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>5PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="nineth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>6PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="tenth_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div  class="row input-row">
-            <div class="col-2" id="datediv"><span>6PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="tenth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>7PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="eleventh_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div  class="row input-row">
-            <div class="col-2" id="datediv"><span>7PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="eleventh_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>8PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="twelveth_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>8PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="twelveth_toDo" placeholder="Daily Task">
+        <div class="row input-row">
+            <div class="col-md-1 hour" id="datediv"><span>9PM</span></div>
+            <div class="col-md-8" id="task-input">
+                <textarea class="col-md-10 description" id="thirdteen_toDo">
+                </textarea>
             </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="input-row" class="row">
-            <div class="col-2" id="datediv"><span>9PM</span></div>
-            <div class="col-8" id="task-input">
-                <input type="text" id="thirdteen_toDo" placeholder="Daily Task">
-            </div>
-            <div class="col-2" id="save_sec">
-                <button type="button" class="btn btn-light" id="saveBtn"><i class="fas fa-save"></i></button>
-            </div>
-        </div>
+
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="script.js"></script>
