--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row input-row">
             <div class="col-md-1 hour" id="datediv"><span>9AM</span></div>
             <div class="col-md-8" id="datediv">
-                <textarea class="col-md-10 description" id="first_toDo">
+                <textarea class="col-md-10 description" data-time="9" id="first_toDo">
                 </textarea>
             </div>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -32,15 +32,15 @@
         <div class="row input-row">
             <div class="col-md-1 hour" id="datediv"><span>10AM</span></div>
             <div class="col-md-8" id="task-input">
-                <textarea class="col-md-10 description" id="second_toDo">
+                <textarea class="col-md-10 description" data-time='10' id="second_toDo">
                 </textarea>
             </div>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="row input-row">
-            <div class="col-md-1 hour" id="datediv"><span>11AM</span></div>
+            <div class="col-md-1 hour " id="datediv"><span>11AM</span></div>
             <div class="col-md-8" id="task-input">
-                <textarea class="col-md-10 description" id="third_toDo">
+                <textarea class="col-md-10 description" data-time="11" id="third_toDo">
                 </textarea>
             </div>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -48,7 +48,7 @@
         <div class="row input-row">
             <div class="col-md-1 hour" id="datediv"><span>Noon</span></div>
             <div class="col-md-8" id="task-input">
-                <textarea class="col-md-10 description" id="fourth_toDo">
+                <textarea class="col-md-10 description" data-time="Noon" id="fourth_toDo">
                 </textarea>
             </div>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -56,7 +56,7 @@
         <div class="row input-row">
             <div class="col-md-1 hour" id="datediv"><span>1PM</span></div>
             <div class="col-md-8" id="task-input">
-                <textarea class="col-md-10 description" id="fifth_toDo">
+                <textarea class="col-md-10 description" data-time="1" id="fifth_toDo">
                 </textarea>
             </div>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
